--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
 
   <main class="wrap">
     <section class="card" aria-live="polite">
-      <p class="badge">Modo girasol activado 🌻</p>
 
       <h1>
         Oye <span class="name">Mi niña</span>…
@@ -57,7 +56,7 @@
 
       <p class="desc">
         Tus ojos son hermosos como un <b>girasol</b>:
-        me les qued mirando y no sabe cómo actuar.
+        me les quedó mirando y no sé cómo actuar.
         <span class="tiny">(Sí, me puse cursi, perdón, que vergüenza.)</span>
       </p>
 
@@ -82,7 +81,8 @@
         <span id="silly">Estado: todo normal… por ahora</span>
       </div>
 
-      <p class="respect">
+     <!-- aparece despues de 10 NO -->
+      <p class="respect" id="respectP">
         *Obvio*: si de verdad no quieres, igual te aprecio muchísimo.
         <button id="realNo" type="button" class="linky">“No, en serio”</button>
       </p>
