--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </p>
 
       <div class="question">
-        <div class="qTitle">¿Quieres ser mi novia? 💗</div>
+        <div class="qTitle"><strong>¿Quieres ser mi novia?</strong> 💗</div>
         <div class="qHint" id="hint">Pista: el botón “NO” es tímido.</div>
       </div>
 
