Ahora si, mejoras, espero las ultimas ajshdbasjkhb

--- a/index.html
+++ b/index.html
@@ -1,128 +1,207 @@
 <!doctype html>
 <html lang="es">
+
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Una pregunta importante 🌻</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Una pregunta importante 🌻</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
-  <!-- decor girasoles -->
-  <div class="bg">
-    <div class="sun s1" aria-hidden="true">
-      <svg viewBox="0 0 200 200" role="img">
-        <g>
-          <g class="petals">
-            <ellipse cx="100" cy="28" rx="18" ry="34"/>
-            <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(30 100 100)"/>
-            <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(60 100 100)"/>
-            <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(90 100 100)"/>
-            <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(120 100 100)"/>
-            <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(150 100 100)"/>
-            <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(180 100 100)"/>
-            <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(210 100 100)"/>
-            <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(240 100 100)"/>
-            <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(270 100 100)"/>
-            <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(300 100 100)"/>
-            <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(330 100 100)"/>
-          </g>
-          <circle class="center" cx="100" cy="100" r="40"/>
-          <circle class="center2" cx="100" cy="100" r="26"/>
-          <circle class="spark" cx="86" cy="92" r="3"/>
-          <circle class="spark" cx="120" cy="108" r="3"/>
-          <circle class="spark" cx="104" cy="122" r="3"/>
-        </g>
-      </svg>
+    <!-- decor girasoles -->
+    <div class="bg">
+        <div class="sun s1" aria-hidden="true">
+            <svg viewBox="0 0 200 200" role="img">
+                <g>
+                    <g class="petals">
+                        <ellipse cx="100" cy="28" rx="18" ry="34" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(30 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(60 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(90 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(120 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(150 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(180 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(210 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(240 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(270 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(300 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(330 100 100)" />
+                    </g>
+                    <circle class="center" cx="100" cy="100" r="40" />
+                    <circle class="center2" cx="100" cy="100" r="26" />
+                    <circle class="spark" cx="86" cy="92" r="3" />
+                    <circle class="spark" cx="120" cy="108" r="3" />
+                    <circle class="spark" cx="104" cy="122" r="3" />
+                </g>
+            </svg>
+        </div>
+
+        <div class="sun s2" aria-hidden="true">
+            <svg viewBox="0 0 200 200" role="img">
+                <g>
+                    <g class="petals">
+                        <ellipse cx="100" cy="28" rx="18" ry="34" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(30 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(60 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(90 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(120 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(150 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(180 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(210 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(240 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(270 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(300 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(330 100 100)" />
+                    </g>
+                    <circle class="center" cx="100" cy="100" r="40" />
+                    <circle class="center2" cx="100" cy="100" r="26" />
+                    <circle class="spark" cx="86" cy="92" r="3" />
+                    <circle class="spark" cx="120" cy="108" r="3" />
+                    <circle class="spark" cx="104" cy="122" r="3" />
+                </g>
+            </svg>
+        </div>
+
+        <div class="sun s3" aria-hidden="true">
+            <!-- mismo svg -->
+            <svg viewBox="0 0 200 200" role="img">
+                <g>
+                    <g class="petals">
+                        <ellipse cx="100" cy="28" rx="18" ry="34" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(30 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(60 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(90 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(120 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(150 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(180 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(210 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(240 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(270 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(300 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(330 100 100)" />
+                    </g>
+                    <circle class="center" cx="100" cy="100" r="40" />
+                    <circle class="center2" cx="100" cy="100" r="26" />
+                    <circle class="spark" cx="86" cy="92" r="3" />
+                    <circle class="spark" cx="120" cy="108" r="3" />
+                    <circle class="spark" cx="104" cy="122" r="3" />
+                </g>
+            </svg>
+        </div>
+
+        <div class="sun s4" aria-hidden="true">
+            <!-- mismo svg -->
+            <svg viewBox="0 0 200 200" role="img">
+                <g>
+                    <g class="petals">
+                        <ellipse cx="100" cy="28" rx="18" ry="34" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(30 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(60 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(90 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(120 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(150 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(180 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(210 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(240 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(270 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(300 100 100)" />
+                        <ellipse cx="100" cy="28" rx="18" ry="34" transform="rotate(330 100 100)" />
+                    </g>
+                    <circle class="center" cx="100" cy="100" r="40" />
+                    <circle class="center2" cx="100" cy="100" r="26" />
+                    <circle class="spark" cx="86" cy="92" r="3" />
+                    <circle class="spark" cx="120" cy="108" r="3" />
+                    <circle class="spark" cx="104" cy="122" r="3" />
+                </g>
+            </svg>
+        </div>
+
+
+        <div class="floaty" aria-hidden="true"></div>
     </div>
 
-    <div class="sun s2" aria-hidden="true"></div>
-    <div class="sun s3" aria-hidden="true"></div>
-    <div class="sun s4" aria-hidden="true"></div>
+    <main class="wrap">
+        <section class="card" aria-live="polite">
+            <h1>
+                Oye <span class="name">Mi niña</span>…
+                <span class="sub">tengo una pregunta algo seria</span>
+            </h1>
 
-    <div class="floaty" aria-hidden="true"></div>
-  </div>
+            <p class="desc">
+                Tus ojos son hermosos como un <b>girasol</b>: me les quedó mirando y
+                no sé cómo actuar.
+                <span class="tiny">(Sí, me puse cursi, perdón, que vergüenza.)</span>
+            </p>
 
-  <main class="wrap">
-    <section class="card" aria-live="polite">
+            <div class="question">
+                <div class="qTitle"><strong>¿Quieres ser mi novia?</strong> 💗</div>
+                <div class="qHint" id="hint">Pista: el botón “NO” es tímido.</div>
+            </div>
 
-      <h1>
-        Oye <span class="name">Mi niña</span>…
-        <span class="sub">tengo una pregunta algo seria</span>
-      </h1>
+            <div class="arena" id="arena">
+                <button id="yesBtn" class="btn yes" type="button">SÍ ✅</button>
 
-      <p class="desc">
-        Tus ojos son hermosos como un <b>girasol</b>:
-        me les quedó mirando y no sé cómo actuar.
-        <span class="tiny">(Sí, me puse cursi, perdón, que vergüenza.)</span>
-      </p>
+                <button id="noBtn" class="btn no" type="button">NO 🙃</button>
+            </div>
 
-      <div class="question">
-        <div class="qTitle"><strong>¿Quieres ser mi novia?</strong> 💗</div>
-        <div class="qHint" id="hint">Pista: el botón “NO” es tímido.</div>
-      </div>
+            <div class="mini">
+                <span id="counter">Intentos de NO: 0</span>
+                <span class="dot">•</span>
+                <span id="silly">Estado: todo normal… por ahora</span>
+            </div>
 
-      <div class="arena" id="arena">
-        <button id="yesBtn" class="btn yes" type="button">
-          SÍ ✅
-        </button>
+            <!-- aparece despues de 10 NO -->
+            <p class="respect" id="respectP" hidden>
+                <em>Obvio</em>: si de verdad no quieres, igual te aprecio muchísimo.
+                <button id="realNo" type="button" class="linky">
+                    “No, en serio”
+                </button>
+            </p>
+        </section>
+    </main>
 
-        <button id="noBtn" class="btn no" type="button">
-          NO 🙃
-        </button>
-      </div>
+    <!-- pantalla final -->
+    <div class="overlay" id="overlay" hidden>
+        <div class="modal">
+            <div class="big">YEEEEI 🌻💗</div>
+            <p class="modalText">
+                Prometo hacerte reír con mis estúpideces <b>sin parar</b>, el tiempo
+                que me dejes estar a tu lado.
+            </p>
 
-      <div class="mini">
-        <span id="counter">Intentos de NO: 0</span>
-        <span class="dot">•</span>
-        <span id="silly">Estado: todo normal… por ahora</span>
-      </div>
+            <div class="chips">
+                <span class="chip">Plan 1: heladito 😏</span>
+                <span class="chip">Plan 2: pasear 🌇</span>
+                <span class="chip">Plan 3: muchas fotos 📸</span>
+            </div>
 
-     <!-- aparece despues de 10 NO -->
-      <p class="respect" id="respectP">
-        *Obvio*: si de verdad no quieres, igual te aprecio muchísimo.
-        <button id="realNo" type="button" class="linky">“No, en serio”</button>
-      </p>
-    </section>
-  </main>
+            <p class="modalSmall">
+                Ahora respóndeme con un sticker o un “si a todo” 😄
+            </p>
 
-  <!-- pantalla final -->
-  <div class="overlay" id="overlay" hidden>
-    <div class="modal">
-      <div class="big">YEEEEI 🌻💗</div>
-      <p class="modalText">
-        Prometo hacerte reír con mis estúpideces <b>sin parar</b>, el tiempo que me dejes estar a tu lado.
-      </p>
-
-      <div class="chips">
-        <span class="chip">Plan 1: heladito 😏</span>
-        <span class="chip">Plan 2: pasear 🌇</span>
-        <span class="chip">Plan 3: muchas fotos 📸</span>
-      </div>
-
-      <p class="modalSmall">
-        Ahora respóndeme con un sticker o un “si a todo” 😄
-      </p>
-
-      <button id="closeBtn" class="btn solid" type="button">Cerrar (para que lo leas 30 veces)</button>
+            <button id="closeBtn" class="btn solid" type="button">
+                Cerrar (para que lo leas 30 veces)
+            </button>
+        </div>
+        <canvas id="confetti"></canvas>
     </div>
-    <canvas id="confetti"></canvas>
-  </div>
 
-  <!-- pantalla "no real" -->
-  <div class="overlay" id="overlayNo" hidden>
-    <div class="modal">
-      <div class="big">Todo bien ❤️</div>
-      <p class="modalText">
-        Gracias por ser sincera. No cambiará mi cariño hacia ti.
-      </p>
-      <button id="backBtn" class="btn solid" type="button">Volver</button>
+    <!-- pantalla "no real" -->
+    <div class="overlay" id="overlayNo" hidden>
+        <div class="modal">
+            <div class="big">Todo bien ❤️</div>
+            <p class="modalText">
+                Gracias por ser sincera. No cambiará mi cariño hacia ti.
+            </p>
+            <button id="backBtn" class="btn solid" type="button">Volver</button>
+        </div>
     </div>
-  </div>
 
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
