--- a/index.html
+++ b/index.html
@@ -148,11 +148,12 @@
                 <button id="noBtn" class="btn no" type="button">NO 🙃</button>
             </div>
 
-            <div class="mini">
+            <div class="mini" id="miniBox" hidden>
                 <span id="counter">Intentos de NO: 0</span>
                 <span class="dot">•</span>
-                <span id="silly">Estado: todo normal… por ahora</span>
+                <span id="silly">Estado: ...</span>
             </div>
+
 
             <!-- aparece despues de 10 NO -->
             <p class="respect" id="respectP" hidden>
